--- a/index.html
+++ b/index.html
@@ -42,5 +42,34 @@
             <button><i class='bx bx-search'></i></button>
         </div>
     </header>
+    <div class="content">
+        <div class="separator">
+            <h2>Popular Courses</h2>
+            <a href="#">See all<i class='bx bx-chevron-right' ></i></a>
+        </div>
+
+        <div class="courses">
+            <div class="item">
+                <div class="top">
+                    <img src="/assets/course-1.jpg" alt="">
+                    <div class="info">
+                        <a href="#">Learn React With Mini Projects</a>
+                        <p>Author : Reza Mehdikhanlou</p>
+                        <p>Duration : +13h</p>
+                        <p>Lifetime Support</p>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="price">
+                        <h5>Price : 40$</h5>
+                        <p>Old Price : 120$</p>
+                    </div>
+                    <h5 class="tag"><span>+400</span> Students</h5>
+                </div>
+            </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
