--- a/index.html
+++ b/index.html
@@ -67,9 +67,32 @@
                     <h5 class="tag"><span>+400</span> Students</h5>
                 </div>
             </div>
-            </div>
+            <div class="item">
+                <div class="top">
+                    <img src="/assets/course-2.jpg" alt="">
+                    <div class="info">
+                        <a href="#">Complete Bootstrap Course</a>
+                        <p>Author : Reza Mehdikhanlou</p>
+                        <p>Duration : +13h</p>
+                        <p>Lifetime Support</p>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="price">
+                        <h5>Price : 40$</h5>
+                        <p>Old Price : 120$</p>
+                    </div>
+                    <div class="discount">
+                        <div class="time">
+                            <p>Untill</p>
+                            <h5>3 Days</h5>
+                        </div>
+                        <h5><span>+400</span> Students</h5>
+                    </div>
+                </div>
+            </div> 
         </div>
-
+    </div>
     </div>
 </body>
 </html>
