--- a/index.html
+++ b/index.html
@@ -87,10 +87,94 @@
                             <p>Untill</p>
                             <h5>3 Days</h5>
                         </div>
-                        <h5><span>+400</span> Students</h5>
+                        <h5><span>20%</span> Discount</h5>
                     </div>
                 </div>
             </div> 
+            <div class="item">
+                <div class="top">
+                    <img src="/assets/course-3.jpg" alt="">
+                    <div class="info">
+                        <a href="#">100 Days of JavaScript</a>
+                        <p>Author : Reza Mehdikhanlou</p>
+                        <p>Duration : +13h</p>
+                        <p>Lifetime Support</p>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="price">
+                        <h5>Price : 40$</h5>
+                        <p>Old Price : 120$</p>
+                    </div>
+                    <h5 class="tag"><span>+400</span> Students</h5>
+                </div>
+            </div>
+            <div class="item">
+                <div class="top">
+                    <img src="/assets/course-4.jpg" alt="">
+                    <div class="info">
+                        <a href="#">Learn Responsive Designs</a>
+                        <p>Author : Reza Mehdikhanlou</p>
+                        <p>Duration : +13h</p>
+                        <p>Lifetime Support</p>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="price">
+                        <h5>Price : 40$</h5>
+                        <p>Old Price : 120$</p>
+                    </div>
+                    <div class="discount">
+                        <div class="time">
+                            <p>Untill</p>
+                            <h5>3 Days</h5>
+                        </div>
+                        <h5><span>20%</span> Discounts</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="top">
+                    <img src="/assets/course-5.jpg" alt="">
+                    <div class="info">
+                        <a href="#">Learn PHP With Mini Projects</a>
+                        <p>Author : Reza Mehdikhanlou</p>
+                        <p>Duration : +13h</p>
+                        <p>Lifetime Support</p>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="price">
+                        <h5>Price : 40$</h5>
+                        <p>Old Price : 120$</p>
+                    </div>
+                    <h5 class="tag"><span>+400</span> Students</h5>
+                </div>
+            </div> 
+            <div class="item">
+                <div class="top">
+                    <img src="/assets/course-6.jpg" alt="">
+                    <div class="info">
+                        <a href="#">Coding Api With NodeJs</a>
+                        <p>Author : Reza Mehdikhanlou</p>
+                        <p>Duration : +13h</p>
+                        <p>Lifetime Support</p>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="price">
+                        <h5>Price : 40$</h5>
+                        <p>Old Price : 120$</p>
+                    </div>
+                    <div class="discount">
+                        <div class="time">
+                            <p>Untill</p>
+                            <h5>3 Days</h5>
+                        </div>
+                        <h5><span>20%</span> Discount</h5>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     </div>
