--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             <h2>Popular Courses</h2>
             <a href="#">See all<i class='bx bx-chevron-right' ></i></a>
         </div>
-
         <div class="courses">
             <div class="item">
                 <div class="top">
@@ -176,7 +175,42 @@
                 </div>
             </div>
         </div>
-    </div>
+
+        <div class="separator">
+            <h2>Student Comments</h2>
+        </div>
+
+        <div class="comments">
+            <p>These are our students comments. This will help you chose courses better.
+                also you can contact us for more info.
+            </p>
+            <div class="right">
+                <div class="item">
+                    <img src="/assets/profile-1.png">
+                    <p>That was best course for me.</p>
+                </div>
+                <div class="item">
+                    <img src="/assets/profile-2.png">
+                    <p>These courses helped me a lot.</p>
+                </div><div class="item">
+                    <img src="/assets/profile-3.png">
+                    <p>That was best course for me.</p>
+                </div>
+                <div class="item">
+                    <img src="/assets/profile-2.png">
+                    <p>These courses helped me a lot.</p>
+                </div>
+                <div class="item">
+                    <img src="/assets/profile-1.png">
+                    <p>That was best course for me.</p>
+                </div>
+                <div class="item">
+                    <img src="/assets/profile-3.png">
+                    <p>These courses helped me a lot.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
